<resources>
    <string name="app_name">Caesar Cipher</string>
    <string name="about">About</string>
    <string name="team">Team</string>
    <string name="team_caesar_salad">Team Caesar Salad</string>
    <string name="team_members">Nicholas Belkoff, Derek Montgomery, Devin Mutlu, Ariel Rubio Perez, and Charlie Zepp
    </string>
    <string name="desc_umbc_logo">UMBC Logo</string>
    <string name="_2017">2017</string>
    <string name="input_hint">Tap to enter message</string>
    <string name="run">Run</string>
    <string name="cipher_key">Cipher Key</string>
    <string name="share_message">Share Message</string>
    <string name="remove_card">Remove Card</string>
    <string name="toast_empty">Please enter a message and key.</string>
    <string name="share_subject">My Encrypted Message</string>
    <string name="share_extra_key">Use the key:</string>
    <string name="clear">Clear</string>
    <string name="toast_copy">Message Copied</string>
    <string name="toast_reveal">Salad anyone?</string>

    <!-- String Plurals. -->
    <plurals name="easter_toast">
        <item quantity="one">You are now %d press from revealing the easter egg.</item>
        <item quantity="two">You are now %d presses from revealing the easter egg.</item>
        <item quantity="few">You are now %d presses from revealing the easter egg.</item>
        <item quantity="other">You are now %d presses from revealing the easter egg.</item>
    </plurals>
</resources>