<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context="edu.umbc.dmutlu1.caesarcipher.TeamActivity"
        android:orientation="vertical">

            <android.support.v7.widget.Toolbar
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="?attr/colorPrimary"
            android:theme="?attr/actionBarTheme"
            android:minHeight="?attr/actionBarSize"
            android:id="@+id/toolbar_team"
            android:elevation="4dp"
            app:title="@string/team"
            app:navigationIcon="@mipmap/ic_launcher"
            app:titleTextColor="@android:color/white"
            app:subtitleTextColor="@android:color/white"/>

    <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent">

        <android.support.constraint.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

            <TextView
                    android:text="@string/team_caesar_salad"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/textTeamName"
                    android:textAppearance="@style/TextAppearance.AppCompat.Headline"
                    app:layout_constraintTop_toTopOf="parent"
                    android:layout_marginTop="62dp"
                    android:layout_marginRight="8dp"
                    app:layout_constraintRight_toRightOf="parent"
                    android:layout_marginLeft="8dp"
                    app:layout_constraintLeft_toLeftOf="parent"
                    app:layout_constraintHorizontal_bias="0.496"/>

            <TextView
                    android:text="@string/_2017"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/textYear"
                    android:layout_marginTop="8dp"
                    app:layout_constraintTop_toBottomOf="@+id/textTeamName"
                    android:layout_marginLeft="8dp"
                    app:layout_constraintLeft_toLeftOf="parent"
                    android:layout_marginRight="8dp"
                    app:layout_constraintRight_toRightOf="parent"
                    android:textAppearance="@style/TextAppearance.AppCompat.Medium"/>

            <ImageView
                    android:layout_width="221dp"
                    android:layout_height="210dp"
                    app:srcCompat="@drawable/umbc_retrievers"
                    android:id="@+id/imageUMBC"
                    android:layout_marginTop="26dp"
                    app:layout_constraintTop_toBottomOf="@+id/textYear"
                    android:layout_marginLeft="8dp"
                    app:layout_constraintLeft_toLeftOf="parent"
                    android:layout_marginRight="8dp"
                    app:layout_constraintRight_toRightOf="parent"
                    app:layout_constraintHorizontal_bias="0.504"
                    android:contentDescription="@string/desc_umbc_logo"/>

            <TextView
                    android:text="@string/team_members"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/textCredits"
                    android:layout_marginTop="8dp"
                    app:layout_constraintTop_toBottomOf="@+id/imageUMBC"
                    android:layout_marginLeft="8dp"
                    app:layout_constraintLeft_toLeftOf="parent"
                    android:layout_marginRight="8dp"
                    app:layout_constraintRight_toRightOf="parent"
                    app:layout_constraintBottom_toBottomOf="parent"
                    android:layout_marginBottom="8dp"
                    android:textAppearance="@style/TextAppearance.AppCompat.Large"
                    app:layout_constraintVertical_bias="0.119"
                    android:textAlignment="center"
                    android:padding="10dp"/>
        </android.support.constraint.ConstraintLayout>
    </ScrollView>
</LinearLayout>